# daguire

./: README.md  daguire.py  demo.py  firmware.txt  gentestdata.py  panner.py  pyproject.toml  spacing.py  staging.db  test.txt
tests/: README.md  file_list.txt  hex_samples.txt
